@@ -2547,8 +2547,15 @@ static int video_snap_end(EZVID *vidx, EZIMG *image)
 #endif
 	}
 
-	eznotify(vidx->sysopt, EN_PROC_END, image->canvas_width, 
-			image->canvas_height, image);
+	if (image->gdcanvas) {
+		eznotify(vidx->sysopt, EN_PROC_END, image->canvas_width, 
+				image->canvas_height, image);
+	} else {
+		/* 20170529 Fixed a bug which freeze the progress bar in 
+		 * key frame dumping mode */
+		eznotify(vidx->sysopt, EN_PROC_END, image->dst_width, 
+				image->dst_height, image);
+	}
 
 	/* display the end of the process and generate the status line */
 	sprintf(status, "%dx%dx%d Thumbnails Generated by Ezthumb %s (%.3f s)",
